# recursive-dir-stats

./: CMakeLists.txt  Makefile  main.cpp
src/: DirStats.cpp  DirStats.hpp  FileStats.cpp  FileStats.hpp  SafeQueue.cpp  SafeQueue.hpp  ThreadPool.cpp  ThreadPool.hpp  main.cpp
tests/: DirStats_test.cpp  FileStats_test.cpp  test.cpp
tests/Data/: FileStats_test_data2.txt
tests/Data/DirStats_test_data4/: FileStats_test_data1.txt
